<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_receipt"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/CardView_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#11A0CC">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/solved_issued"
                    android:textColor="#FAFAFA"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/amount"
                    android:textColor="#FAF7F7"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/listview1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                >

            </ListView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >

            <ImageView
                android:id="@+id/ImageView_Add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add_black_24dp"
                />
            <TextView
                android:id="@+id/TextView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="5dp"
                />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_toEndOf="@+id/TextView_name"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/Button_SendReceipt"
        android:layout_below="@id/CardView_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/send"
        android:textColor="#fff"
        android:background="#11A0CC"
        />
    <Button
        android:id="@+id/Button_Complete_Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CardView_receipt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/complete_request"
        android:background="#11A0CC"
        android:textColor="#fff"
        android:padding="5dp"
        android:visibility="invisible"
    />

</RelativeLayout>