<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:id="@+id/TextView_SolvedIssued"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solved_issued"
        android:textSize="17sp"
        android:textColor="#000"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_solve_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/TextView_SolvedIssued"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textMultiLine"
        />

    <TextView
        android:id="@+id/TextView_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="17sp"
        android:textColor="#000"
        android:layout_below="@+id/et_solve_issue"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/et_solve_issue"
        android:layout_toEndOf="@+id/TextView_amount"
        android:layout_marginEnd="15dp"
        />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E1FF"
        android:text="@string/add"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_below="@+id/etAmount"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        />
</RelativeLayout>