<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2D8E4"
    android:orientation="vertical"
    tools:context=".Fragments.OnGoingServiceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C2D8E4"
        android:paddingBottom="10dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/Text_UserInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="USER INFO"
                    android:textColor="#000"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/Text_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_UserInfo"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Name :-"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextView_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_UserInfo"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/Text_Name"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Text_PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_Name"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="PhoneNo :-"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextView_PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView_Name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/Text_PhoneNo"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/map_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CardView"
            android:layout_margin="5dp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MapsActivity" />

            <Button
                android:id="@+id/Button_Employee_Location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_location_searching_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/Button_Complete_Request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/generate_receipt"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/Button_PickUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/pick_up"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/Button_Reached"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_layout"
            android:layout_marginStart="20dp"
            android:background="#fff"
            android:padding="10dp"
            android:text="@string/reached"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</ScrollView>